@@ -74,6 +74,7 @@
   "item.supertools.copperchestplate" : "Kupferharnisch",
   "item.supertools.copperleggings" : "Kupferbeinschutz",
   "item.supertools.copperboots" : "Kupferstiefel",
+  "item.supertools.adarum" : "Adarum",
   "advancements.supertools.root.title" : "Super Werkzeuge",
   "advancements.supertools.root.description" : "Stelle jedes Super Werkzeug her!",
   "advancements.supertools.superaxe.title" : "Super Axt",
