@@ -74,6 +74,7 @@
   "item.supertools.copperchestplate" : "Copper Chestplate",
   "item.supertools.copperleggings" : "Copper Leggings",
   "item.supertools.copperboots" : "Copper Boots",
+  "item.supertools.adarum" : "Adarum",
   "advancements.supertools.root.title" : "Super Tools",
   "advancements.supertools.root.description" : "Make every Super Tool!",
   "advancements.supertools.superaxe.title" : "Super Axe",
