@@ -64,6 +64,7 @@
   "item.supertools.quartzsickle": "Hoz de Cuarzo",
   "item.supertools.netheritesickle": "Hoz de Netherita",
   "item.supertools.supersickle": "Super Hoz",
+  "item.supertools.adarum" : "Adarum",
   "advancements.supertools.root.title": "Super Herramientas",
   "advancements.supertools.root.description": "¡Crea todas las Super Herramientas!",
   "advancements.supertools.superaxe.title": "Súper Hacha",
