@@ -1,85 +1,98 @@
 {
-"itemGroup.armor": "Super Armaduras",
-"itemGroup.tools": "Ferramentas",
-"itemGroup.supertools" : "Super Ferramentas",
-"item.supertools.quartzhoe": "Enchada de quartzo",
-"item.supertools.quartzaxe": "Machado de quartzo",
-"item.supertools.quartzpickaxe": "Picareta de quartzo",
-"item.supertools.quartzshovel": "Pá de quartzo",
-"item.supertools.quartzsword": "Espada de quartzo",
-"item.supertools.emeraldhoe": "Enxada de esmeralda",
-"item.supertools.emeraldaxe": "Machado de esmeralda",
-"item.supertools.emeraldpickaxe": "Picareta de esmeralda",
-"item.supertools.emeraldshovel": "Pá de esmeralda",
-"item.supertools.emeraldsword": "Espada de esmeralda",
-"item.supertools.obsidianhoe": "Enxada de obsidiana",
-"item.supertools.obsidianaxe": "Machado de obsidiana",
-"item.supertools.obsidianpickaxe": "Picareta de obsidiana",
-"item.supertools.obsidianshovel": "Pá de obsidiana",
-"item.supertools.obsidiansword": "Espada de obsidiana",
-"item.supertools.lapishoe": "Enxada de lápis",
-"item.supertools.lapisaxe": "Machado de lápis",
-"item.supertools.lapispickaxe": "Picareta de lápis",
-"item.supertools.lapisshovel": "Pá de lápis",
-"item.supertools.lapissword": "Espada de lápis",
-"item.supertools.redstonehoe": "Machado de redstone",
-"item.supertools.redstoneaxe": "Machado de redstone",
-"item.supertools.redstonepickaxe": "Picareta de redstone",
-"item.supertools.redstoneshovel": "Pá de redstone",
-"item.supertools.redstonesword": "Espada de redstone",
-"item.supertools.emeraldhelmet" : "Capacete de esmeralda",
-"item.supertools.emeraldchestplate" : "Peitoral de esmeralda",
-"item.supertools.emeraldleggings" : "Calças de esmeralda",
-"item.supertools.emeraldboots" : "Botas de esmeralda",
-"item.supertools.obsidianhelmet" : "Capacete de obsidiana",
-"item.supertools.obsidianchestplate" : "Peitoral de obsidiana",
-"item.supertools.obsidianleggings" : "Calças de obsidiana",
-"item.supertools.obsidianboots" : "Botas de obsidiana",
-"item.supertools.lapishelmet" : "Capacete de lápis",
-"item.supertools.lapischestplate" : "Peitoral de lápis",
-"item.supertools.lapisleggings" : "Calças de lápis",
-"item.supertools.lapisboots" : "Botas de lápis",
-"item.supertools.quartzhelmet" : "Capacete de quartzo",
-"item.supertools.quartzchestplate" : "Peitoral de quartzo",
-"item.supertools.quartzleggings" : "Calças de quartzo",
-"item.supertools.quartzboots" : "Botas de quartzo",
-"item.supertools.bonemealtool" : "Saco de farinha de osso",
-"item.supertools.superhoe": "Super Enxada",
-"item.supertools.superaxe": "Super Machado",
-"item.supertools.superpickaxe": "Super Pickaxe",
-"item.supertools.supershovel": "Super Shovel",
-"item.supertools.supersword": "Super Sword",
-"item.supertools.itemcup" : "Troféu",
-"item.supertools.specialcup" : "Troféu especial",
-"item.supertools.woodensickle" : "Foice de madeira",
-"item.supertools.stonesickle" : "Foice de pedra",
-"item.supertools.lapissickle" : "Foice de lápis",
-"item.supertools.ironsickle" : "Foice de ferro",
-"item.supertools.redstonesickle" : "Foice de redstone",
-"item.supertools.goldensickle" : "Foice de ouro",
-"item.supertools.diamondsickle" : "Foice de diamante",
-"item.supertools.emeraldsickle" : "Foice de esmeralda",
-"item.supertools.obsidiansickle" : "Foice de obsidiana",
-"item.supertools.quartzsickle" : "Foice de quartzo",
-"item.supertools.supersickle" : "Super Foice",
-"advancements.supertools.root.title" : "Super Ferramentas",
-"advancements.supertools.root.description" : "Fabrique todas as Super Ferramentas!",
-"advancements.supertools.superaxe.title" : "Super Machado",
-"advancements.supertools.superaxe.description" : "Não é um Super Machado?",
-"advancements.supertools.superpickaxe.title" : "Super Picareta",
-"advancements.supertools.superpickaxe.description" : "Não é uma Super Picareta?",
-"advancements.supertools.supershovel.title" : "Super Pá",
-"advancements.supertools.supershovel.description" : "Não é uma Super Pá?",
-"advancements.supertools.superhoe.title" : "Super Enxada",
-"advancements.supertools.superhoe.description" : "Não é uma Super Enxada?",
-"advancements.supertools.supersword.title" : "Super Espada",
-"advancements.supertools.supersword.description" : "Não é uma Super Espada?",
-"advancements.supertools.supersickle.title" : "Super Foice",
-"advancements.supertools.supersickle.description" : "Não é uma Super Foice?",
-"advancements.supertools.bonemealtool.title" : "Saco de farinha de osso?",
-"advancements.supertools.bonemealtool.description" : "Por que você não usa ele para fertilizar algumas plantas?",
-"advancements.supertools.cup.title" : "TROFÉU!",
-"advancements.supertools.cup.description" : "Por que você não minera com ele?",
-"advancements.supertools.specialcup.title" : "SUPER TROFÉU!",
-"advancements.supertools.specialcup.description" : "Por que você não acerta alguns mobs com ele?"
+  "itemGroup.armor": "Super Armaduras",
+  "itemGroup.tools": "Ferramentas",
+  "itemGroup.supertools": "Super Ferramentas",
+  "item.supertools.quartzhoe": "Enchada de quartzo",
+  "item.supertools.quartzaxe": "Machado de quartzo",
+  "item.supertools.quartzpickaxe": "Picareta de quartzo",
+  "item.supertools.quartzshovel": "Pá de quartzo",
+  "item.supertools.quartzsword": "Espada de quartzo",
+  "item.supertools.emeraldhoe": "Enxada de esmeralda",
+  "item.supertools.emeraldaxe": "Machado de esmeralda",
+  "item.supertools.emeraldpickaxe": "Picareta de esmeralda",
+  "item.supertools.emeraldshovel": "Pá de esmeralda",
+  "item.supertools.emeraldsword": "Espada de esmeralda",
+  "item.supertools.obsidianhoe": "Enxada de obsidiana",
+  "item.supertools.obsidianaxe": "Machado de obsidiana",
+  "item.supertools.obsidianpickaxe": "Picareta de obsidiana",
+  "item.supertools.obsidianshovel": "Pá de obsidiana",
+  "item.supertools.obsidiansword": "Espada de obsidiana",
+  "item.supertools.lapishoe": "Enxada de lápis",
+  "item.supertools.lapisaxe": "Machado de lápis",
+  "item.supertools.lapispickaxe": "Picareta de lápis",
+  "item.supertools.lapisshovel": "Pá de lápis",
+  "item.supertools.lapissword": "Espada de lápis",
+  "item.supertools.redstonehoe": "Machado de redstone",
+  "item.supertools.redstoneaxe": "Machado de redstone",
+  "item.supertools.redstonepickaxe": "Picareta de redstone",
+  "item.supertools.redstoneshovel": "Pá de redstone",
+  "item.supertools.redstonesword": "Espada de redstone",
+  "item.supertools.emeraldhelmet": "Capacete de esmeralda",
+  "item.supertools.emeraldchestplate": "Peitoral de esmeralda",
+  "item.supertools.emeraldleggings": "Calças de esmeralda",
+  "item.supertools.emeraldboots": "Botas de esmeralda",
+  "item.supertools.obsidianhelmet": "Capacete de obsidiana",
+  "item.supertools.obsidianchestplate": "Peitoral de obsidiana",
+  "item.supertools.obsidianleggings": "Calças de obsidiana",
+  "item.supertools.obsidianboots": "Botas de obsidiana",
+  "item.supertools.lapishelmet": "Capacete de lápis",
+  "item.supertools.lapischestplate": "Peitoral de lápis",
+  "item.supertools.lapisleggings": "Calças de lápis",
+  "item.supertools.lapisboots": "Botas de lápis",
+  "item.supertools.quartzhelmet": "Capacete de quartzo",
+  "item.supertools.quartzchestplate": "Peitoral de quartzo",
+  "item.supertools.quartzleggings": "Calças de quartzo",
+  "item.supertools.quartzboots": "Botas de quartzo",
+  "item.supertools.bonemealtool": "Saco de farinha de osso",
+  "item.supertools.superhoe": "Super Enxada",
+  "item.supertools.superaxe": "Super Machado",
+  "item.supertools.superpickaxe": "Super Pickaxe",
+  "item.supertools.supershovel": "Super Shovel",
+  "item.supertools.supersword": "Super Sword",
+  "item.supertools.itemcup": "Troféu",
+  "item.supertools.specialcup": "Troféu especial",
+  "item.supertools.woodensickle": "Foice de madeira",
+  "item.supertools.stonesickle": "Foice de pedra",
+  "item.supertools.lapissickle": "Foice de lápis",
+  "item.supertools.ironsickle": "Foice de ferro",
+  "item.supertools.redstonesickle": "Foice de redstone",
+  "item.supertools.goldensickle": "Foice de ouro",
+  "item.supertools.diamondsickle": "Foice de diamante",
+  "item.supertools.emeraldsickle": "Foice de esmeralda",
+  "item.supertools.obsidiansickle": "Foice de obsidiana",
+  "item.supertools.quartzsickle": "Foice de quartzo",
+  "item.supertools.supersickle": "Super Foice",
+  "item.supertools.platinumsickle": "Platinum Sickle",
+  "item.supertools.netheritesickle": "Netherite Sickle",
+  "item.supertools.copperhoe": "Copper Hoe",
+  "item.supertools.copperaxe": "Copper Axe",
+  "item.supertools.copperpickaxe": "Copper Pickaxe",
+  "item.supertools.coppershovel": "Copper Shovel",
+  "item.supertools.coppersword": "Copper Sword",
+  "item.supertools.coppersickle": "Copper Sickle",
+  "item.supertools.copperhelmet": "Copper Helmet",
+  "item.supertools.copperchestplate": "Copper Chestplate",
+  "item.supertools.copperleggings": "Copper Leggings",
+  "item.supertools.copperboots": "Copper Boots",
+  "item.supertools.adarum": "Adarum",
+  "advancements.supertools.root.title": "Super Ferramentas",
+  "advancements.supertools.root.description": "Fabrique todas as Super Ferramentas!",
+  "advancements.supertools.superaxe.title": "Super Machado",
+  "advancements.supertools.superaxe.description": "Não é um Super Machado?",
+  "advancements.supertools.superpickaxe.title": "Super Picareta",
+  "advancements.supertools.superpickaxe.description": "Não é uma Super Picareta?",
+  "advancements.supertools.supershovel.title": "Super Pá",
+  "advancements.supertools.supershovel.description": "Não é uma Super Pá?",
+  "advancements.supertools.superhoe.title": "Super Enxada",
+  "advancements.supertools.superhoe.description": "Não é uma Super Enxada?",
+  "advancements.supertools.supersword.title": "Super Espada",
+  "advancements.supertools.supersword.description": "Não é uma Super Espada?",
+  "advancements.supertools.supersickle.title": "Super Foice",
+  "advancements.supertools.supersickle.description": "Não é uma Super Foice?",
+  "advancements.supertools.bonemealtool.title": "Saco de farinha de osso?",
+  "advancements.supertools.bonemealtool.description": "Por que você não usa ele para fertilizar algumas plantas?",
+  "advancements.supertools.cup.title": "TROFÉU!",
+  "advancements.supertools.cup.description": "Por que você não minera com ele?",
+  "advancements.supertools.specialcup.title": "SUPER TROFÉU!",
+  "advancements.supertools.specialcup.description": "Por que você não acerta alguns mobs com ele?"
 }
