@@ -64,6 +64,17 @@
   "item.supertools.quartzsickle" : "Кварцевый Серп",
   "item.supertools.netheritesickle" : "Незеритовый Серп",
   "item.supertools.supersickle" : "Супер-Серп",
+  "item.supertools.copperhoe": "Copper Hoe",
+  "item.supertools.copperaxe": "Copper Axe",
+  "item.supertools.copperpickaxe": "Copper Pickaxe",
+  "item.supertools.coppershovel": "Copper Shovel",
+  "item.supertools.coppersword": "Copper Sword",
+  "item.supertools.coppersickle": "Copper Sickle",
+  "item.supertools.copperhelmet": "Copper Helmet",
+  "item.supertools.copperchestplate": "Copper Chestplate",
+  "item.supertools.copperleggings": "Copper Leggings",
+  "item.supertools.copperboots": "Copper Boots",
+  "item.supertools.adarum": "Adarum",
   "advancements.supertools.root.title" : "Супер-Инструенты",
   "advancements.supertools.root.description" : "Создайте каждый Супер-Инструмент!",
   "advancements.supertools.superaxe.title" : "Супер-Топор",
