@@ -64,6 +64,17 @@
   "item.supertools.quartzsickle" : "石英鐮刀",
   "item.supertools.netheritesickle" : "獄髓鐮刀",
   "item.supertools.supersickle" : "超級鐮刀",
+  "item.supertools.copperhoe": "Copper Hoe",
+  "item.supertools.copperaxe": "Copper Axe",
+  "item.supertools.copperpickaxe": "Copper Pickaxe",
+  "item.supertools.coppershovel": "Copper Shovel",
+  "item.supertools.coppersword": "Copper Sword",
+  "item.supertools.coppersickle": "Copper Sickle",
+  "item.supertools.copperhelmet": "Copper Helmet",
+  "item.supertools.copperchestplate": "Copper Chestplate",
+  "item.supertools.copperleggings": "Copper Leggings",
+  "item.supertools.copperboots": "Copper Boots",
+  "item.supertools.adarum": "Adarum",
   "advancements.supertools.root.title" : "超級工具",
   "advancements.supertools.root.description" : "製作任何超級工具!",
   "advancements.supertools.superaxe.title" : "超級斧",
