@@ -1,5 +1,5 @@
 {
-  "type": "minecraft:smithing",
+  "type": "minecraft:smithing_transform",
   "base": {
     "item": "supertools:diamondsickle"
   },
@@ -8,5 +8,8 @@
   },
   "result": {
     "item": "supertools:netheritesickle"
+  },
+  "template": {
+    "item": "minecraft:netherite_upgrade_smithing_template"
   }
 }
