@@ -10,7 +10,7 @@
             "item": "minecraft:gold_ingot"
         },
         "D": {
-            "item": "minecraft:diamond"
+            "item": "supertools:adarum"
         },
         "/": {
             "item": "minecraft:blaze_rod"
