@@ -7,7 +7,7 @@
     ],
     "key": {
         "#": {
-            "item": "minecraft:diamond"
+            "item": "supertools:adarum"
         },
         "g": {
             "item": "minecraft:gold_ingot"
