@@ -7,7 +7,7 @@
     ],
     "key": {
         "g": {
-            "item": "minecraft:gold_ingot"
+            "item": "supertools:adarum"
         },
         "/": {
             "item": "minecraft:blaze_rod"
